--- a/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init.cfg
+++ b/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init.cfg
@@ -174,19 +174,19 @@
     filename_initial_mesh_ANT_config             = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_spinup/main_output_ANT_00001.nc'
 
     ! Resolutions for different parts of the ice sheet
-    maximum_resolution_uniform_config            = 200e3                            ! [m]          Maximum resolution for the entire domain
-    maximum_resolution_grounded_ice_config       = 50e3                             ! [m]          Maximum resolution for grounded ice
-    maximum_resolution_floating_ice_config       = 30e3                             ! [m]          Maximum resolution for floating ice
-    maximum_resolution_grounding_line_config     = 20e3                             ! [m]          Maximum resolution for the grounding line
-    maximum_resolution_calving_front_config      = 30e3                             ! [m]          Maximum resolution for the calving front
-    maximum_resolution_ice_front_config          = 50e3                             ! [m]          Maximum resolution for the ice front
-    maximum_resolution_coastline_config          = 50e3                             ! [m]          Maximum resolution for the coastline
+    maximum_resolution_uniform_config            = 240e3                            ! [m]          Maximum resolution for the entire domain
+    maximum_resolution_grounded_ice_config       = 64e3                             ! [m]          Maximum resolution for grounded ice
+    maximum_resolution_floating_ice_config       = 16e3                             ! [m]          Maximum resolution for floating ice
+    maximum_resolution_grounding_line_config     = 16e3                             ! [m]          Maximum resolution for the grounding line
+    maximum_resolution_calving_front_config      = 16e3                             ! [m]          Maximum resolution for the calving front
+    maximum_resolution_ice_front_config          = 80e3                             ! [m]          Maximum resolution for the ice front
+    maximum_resolution_coastline_config          = 80e3                             ! [m]          Maximum resolution for the coastline
 
     ! Widths for each resolution band
-    grounding_line_width_config                  = 12e3                             ! [m]          Width of the band around the grounding line that should get this resolution
-    calving_front_width_config                   = 12e3                             ! [m]          Width of the band around the calving front that should get this resolution
-    ice_front_width_config                       = 12e3                             ! [m]          Width of the band around the ice front that should get this resolution
-    coastline_width_config                       = 12e3                             ! [m]          Width of the band around the coastline that should get this resolution
+    grounding_line_width_config                  = 8e3                             ! [m]          Width of the band around the grounding line that should get this resolution
+    calving_front_width_config                   = 8e3                             ! [m]          Width of the band around the calving front that should get this resolution
+    ice_front_width_config                       = 8e3                             ! [m]          Width of the band around the ice front that should get this resolution
+    coastline_width_config                       = 8e3                             ! [m]          Width of the band around the coastline that should get this resolution
 
     ! Regions of interest
     choice_regions_of_interest_config            = ''                               ! Regions of interest where other (higher) resolutions apply. Separated by double vertical bars "||", e.g. "PineIsland||Thwaites"
@@ -206,7 +206,7 @@
 
     ! Mesh update settings
     allow_mesh_updates_config                    = .TRUE.                          ! [-]          Whether or not mesh updates are allowed
-    dt_mesh_update_min_config                    = 1000.0                           ! [yr]         Minimum amount of time between mesh updates
+    dt_mesh_update_min_config                    = 100.0                           ! [yr]         Minimum amount of time between mesh updates
     minimum_mesh_fitness_coefficient_config      = 0.95                             ! [-]          If the mesh fitness coefficient drops below this threshold, trigger a mesh update
     do_out_of_time_calving_front_relax_config    = .TRUE.                           !              Whether or not to step out of time and relax the calving front for a few iterations after a mesh update
 
@@ -314,7 +314,7 @@
   ! ===========================================
 
     ! Calculation of dH/dt
-    choice_ice_integration_method_config         = 'explicit'                       ! Choice of ice thickness integration scheme: "none" (i.e. unchanging geometry), "explicit", "semi-implicit"
+    choice_ice_integration_method_config         = 'semi-implicit'                       ! Choice of ice thickness integration scheme: "none" (i.e. unchanging geometry), "explicit", "semi-implicit"
     dHi_semiimplicit_fs_config                   = 1.0                              ! Factor for the semi-implicit ice thickness solver (0 = explicit, 0<f<1 = semi-implicit, 1 = implicit, >1 = over-implicit)
     dHi_PETSc_rtol_config                        = 1E-7                             ! dHi PETSc solver - stop criterion, relative difference (iteration stops if rtol OR abstol is reached)
     dHi_PETSc_abstol_config                      = 1E-2                             ! dHi PETSc solver - stop criterion, absolute difference
@@ -725,7 +725,7 @@
     uniform_BMB_config                           = 0.0
 
     ! "parameterised"
-    BMB_Favier2019_gamma_config                  = 10.0E-5
+    BMB_Favier2019_gamma_config                  = 20.0E-5
 
     ! "inverted"
     BMB_inversion_t_start_config                 = -9.9E9                           ! [yr] Only nudge melt rates when the model time lies between t_start and t_end
