--- a/config-files/config_ant_PD_inversion_dHdt_init.cfg
+++ b/config-files/config_ant_PD_inversion_dHdt_init.cfg
@@ -5,7 +5,7 @@
 
     ! Output directory
     create_procedural_output_dir_config          = .FALSE.                          ! Automatically create an output directory with a procedural name (e.g. results_20210720_001/)
-    fixed_output_dir_config                      = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_inversion_dHdt_init'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
+    fixed_output_dir_config                      = 'results_ant_PD_inversion_dHdt_init'           ! If not, create a directory with this name instead (stops the program if this directory already exists)
 
     ! Debugging
     do_benchmarks_config                         = .FALSE.                          ! Whether or not to (only) perform the unit tests in the main_validation module
@@ -17,7 +17,7 @@
   ! =====================
 
     start_time_of_run_config                     = 0.0                              ! [yr] Start time of the simulation
-    end_time_of_run_config                       = 50000.0                          ! [yr] End   time of the simulation
+    end_time_of_run_config                       = 40000.0                          ! [yr] End   time of the simulation
 
   ! == Which model regions to simulate
   ! ==================================
@@ -90,7 +90,7 @@
     filename_refgeo_init_NAM_config              = 'data/ETOPO1/NorthAmerica_ETOPO1_5km.nc'
     filename_refgeo_init_EAS_config              = 'data/ETOPO1/Eurasia_ETOPO1_5km.nc'
     filename_refgeo_init_GRL_config              = 'data/Bedmachine_Greenland/BedMachine_Greenland_v4_2km.nc'
-    filename_refgeo_init_ANT_config              = '/home/x_frare/data/Bedmachine_Antarctica/Bedmachine_v3_Antarctica_5km.nc'
+    filename_refgeo_init_ANT_config              = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/external/data/topography/Antarctica/BedMachineAntarctica_v3_4km.nc'
     ! Timeframe to read from the geometry file (set to 1E9    if the file has no time dimension)
     timeframe_refgeo_init_NAM_config             = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_init_EAS_config             = 1E9
@@ -111,7 +111,7 @@
     filename_refgeo_PD_NAM_config                = 'data/ETOPO1/NorthAmerica_ETOPO1_5km.nc'
     filename_refgeo_PD_EAS_config                = 'data/ETOPO1/Eurasia_ETOPO1_5km.nc'
     filename_refgeo_PD_GRL_config                = 'data/Bedmachine_Greenland/BedMachine_Greenland_v4_2km.nc'
-    filename_refgeo_PD_ANT_config                = '/home/x_frare/data/Bedmachine_Antarctica/Bedmachine_v3_Antarctica_5km.nc'
+    filename_refgeo_PD_ANT_config                = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/external/data/topography/Antarctica/BedMachineAntarctica_v3_4km.nc'
     ! Timeframe to read from the geometry file (set to 1E9    if the file has no time dimension)
     timeframe_refgeo_PD_NAM_config               = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_PD_EAS_config               = 1E9
@@ -132,7 +132,7 @@
     filename_refgeo_GIAeq_NAM_config             = 'data/ETOPO1/NorthAmerica_ETOPO1_5km.nc'
     filename_refgeo_GIAeq_EAS_config             = 'data/ETOPO1/Eurasia_ETOPO1_5km.nc'
     filename_refgeo_GIAeq_GRL_config             = 'data/Bedmachine_Greenland/BedMachine_Greenland_v4_2km.nc'
-    filename_refgeo_GIAeq_ANT_config             = '/home/x_frare/data/Bedmachine_Antarctica/Bedmachine_v3_Antarctica_5km.nc'
+    filename_refgeo_GIAeq_ANT_config             = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/external/data/topography/Antarctica/BedMachineAntarctica_v3_4km.nc'
     ! Timeframe to read from the geometry file (set to 1E9    if the file has no time dimension)
     timeframe_refgeo_GIAeq_NAM_config            = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_refgeo_GIAeq_EAS_config            = 1E9
@@ -171,7 +171,7 @@
     filename_initial_mesh_NAM_config             = ''
     filename_initial_mesh_EAS_config             = ''
     filename_initial_mesh_GRL_config             = ''
-    filename_initial_mesh_ANT_config             = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_spinup/main_output_ANT_00001.nc'
+    filename_initial_mesh_ANT_config             = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/results_ant_PD_spinup/main_output_ANT_00001.nc'
 
     ! Resolutions for different parts of the ice sheet
     maximum_resolution_uniform_config            = 200e3                            ! [m]          Maximum resolution for the entire domain
@@ -183,10 +183,10 @@
     maximum_resolution_coastline_config          = 50e3                             ! [m]          Maximum resolution for the coastline
 
     ! Widths for each resolution band
-    grounding_line_width_config                  = 10e3                             ! [m]          Width of the band around the grounding line that should get this resolution
-    calving_front_width_config                   = 10e3                             ! [m]          Width of the band around the calving front that should get this resolution
-    ice_front_width_config                       = 10e3                             ! [m]          Width of the band around the ice front that should get this resolution
-    coastline_width_config                       = 10e3                             ! [m]          Width of the band around the coastline that should get this resolution
+    grounding_line_width_config                  = 12e3                             ! [m]          Width of the band around the grounding line that should get this resolution
+    calving_front_width_config                   = 12e3                             ! [m]          Width of the band around the calving front that should get this resolution
+    ice_front_width_config                       = 12e3                             ! [m]          Width of the band around the ice front that should get this resolution
+    coastline_width_config                       = 12e3                             ! [m]          Width of the band around the coastline that should get this resolution
 
     ! Regions of interest
     choice_regions_of_interest_config            = ''                               ! Regions of interest where other (higher) resolutions apply. Separated by double vertical bars "||", e.g. "PineIsland||Thwaites"
@@ -205,7 +205,7 @@
     ROI_coastline_width_config                   = 05e3                             ! [m]          Width of the band around the coastline that should get this resolution
 
     ! Mesh update settings
-    allow_mesh_updates_config                    = .TRUE.                          ! [-]          Whether or not mesh updates are allowed
+    allow_mesh_updates_config                    = .FALSE.                          ! [-]          Whether or not mesh updates are allowed
     dt_mesh_update_min_config                    = 1000.0                           ! [yr]         Minimum amount of time between mesh updates
     minimum_mesh_fitness_coefficient_config      = 0.95                             ! [-]          If the mesh fitness coefficient drops below this threshold, trigger a mesh update
     do_out_of_time_calving_front_relax_config    = .TRUE.                           !              Whether or not to step out of time and relax the calving front for a few iterations after a mesh update
@@ -337,7 +337,7 @@
     filename_dHi_dt_target_NAM_config            = ''
     filename_dHi_dt_target_EAS_config            = ''
     filename_dHi_dt_target_GRL_config            = ''
-    filename_dHi_dt_target_ANT_config            = '/home/x_frare/data/dHdt_Antarctica/dHdt_antarctica_4km.nc'
+    filename_dHi_dt_target_ANT_config            = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/external/data/thinning_rates/Antarctica/dHdt_antarctica_4km.nc'
 
     ! Timeframes for reading target dHi_dt from file (set to 1E9_dp if the file has no time dimension)
     timeframe_dHi_dt_target_NAM_config           = 1E9
@@ -446,7 +446,7 @@
     filename_bed_roughness_NAM_config            = ''
     filename_bed_roughness_EAS_config            = ''
     filename_bed_roughness_GRL_config            = ''
-    filename_bed_roughness_ANT_config            = '/home/x_frare/data/Sediments/Li_2020/till_friction_angle_Li2020.nc'
+    filename_bed_roughness_ANT_config            = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/data/Sediments/Li_2020/till_friction_angle_Li2020.nc'
     ! Timeframes to read from the bed roughness file (set to 1E9    if the file has no time dimension)
     timeframe_bed_roughness_NAM_config           = 1E9                              ! Can be different from C%start_time_of_run, be careful though!
     timeframe_bed_roughness_EAS_config           = 1E9
@@ -473,7 +473,7 @@
     ! General
     do_bed_roughness_nudging_config              = .TRUE.                          !           Whether or not to nudge the basal roughness
     choice_bed_roughness_nudging_method_config   = 'H_dHdt_flowline'                               !           Choice of bed roughness nudging method
-    choice_inversion_target_geometry_config      = 'init'                             !           Which reference geometry to use as the target geometry (can be "init" or "PD")
+    choice_inversion_target_geometry_config      = 'PD'                             !           Which reference geometry to use as the target geometry (can be "init" or "PD")
     bed_roughness_nudging_dt_config              = 5.0                              ! [yr]      Time step for bed roughness updates
     bed_roughness_nudging_t_start_config         = -9.9E9                           ! [yr]      Earliest model time when nudging is allowed
     bed_roughness_nudging_t_end_config           = +9.9E9                           ! [yr]      Latest   model time when nudging is allowed
@@ -492,7 +492,7 @@
 
     choice_geothermal_heat_flux_config           = 'read_from_file'                 ! Choice of geothermal heat flux; can be 'uniform' or 'read_from_file'
     uniform_geothermal_heat_flux_config          = 1.72E06                          ! [J m^-2 yr^-1] Value when choice_geothermal_heat_flux == 'uniform' (1.72E06 J m^-2 yr^-1 according to Sclater et al. (1980))
-    filename_geothermal_heat_flux_config         = '/home/x_frare/data/GHF/ShapiroRitzwoller2004_global.nc' ! Expected units: J m^-2 s^-1 (conversion done internally). External GHF data file.
+    filename_geothermal_heat_flux_config         = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/external/data/geothermal_heat_flux/ShapiroRitzwoller2004_global.nc' ! Expected units: J m^-2 s^-1 (conversion done internally). External GHF data file.
 
   ! == Thermodynamics
   ! =================
@@ -566,10 +566,10 @@
     filename_climate_snapshot_NAM_config         = ''
     filename_climate_snapshot_EAS_config         = ''
     filename_climate_snapshot_GRL_config         = ''
-    filename_climate_snapshot_ANT_config         = '/home/x_frare/data/climate/RACMO_clim_1979_2021_winds_noNaN.nc'
+    filename_climate_snapshot_ANT_config         = '/Users/frre9931/Documents/PhD/RACMO/RACMO_clim_1979_2021_winds_noNaN.nc'
     
     choice_insolation_forcing_config             = 'static'                         ! 'static' or 'realistic'
-    filename_insolation_config                   = '/home/x_frare/data/global_forcings/Laskar_etal_2004_insolation.nc'                               ! File with the insolation solution (Laskar 2004)
+    filename_insolation_config                   = '/Users/frre9931/Documents/PhD/ANT_UFEMISM/global_forcings/Insolation/Laskar_etal_2004_insolation.nc'                               ! File with the insolation solution (Laskar 2004)
     static_insolation_time_config                = 0.0                              ! [ka?] time to use for a static insolation
  
 
@@ -599,7 +599,7 @@
     filename_ocean_snapshot_NAM_config           = ''
     filename_ocean_snapshot_EAS_config           = ''
     filename_ocean_snapshot_GRL_config           = ''
-    filename_ocean_snapshot_ANT_config           = '/home/x_frare/data/ocean/woa18_decav_ts00_04_remapcon_r360x180_NaN.nc'
+    filename_ocean_snapshot_ANT_config           = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/external/data/ocean/woa18_decav_ts00_04_remapcon_r360x180_NaN.nc'
 
   ! == Surface mass balance
   ! =======================
@@ -630,7 +630,7 @@
     filename_SMB_prescribed_NAM_config           = ''
     filename_SMB_prescribed_EAS_config           = ''
     filename_SMB_prescribed_GRL_config           = ''
-    filename_SMB_prescribed_ANT_config           = '/home/x_frare/data/RACMO/Antarctica/RACMO_SMB_1979_2016.nc'
+    filename_SMB_prescribed_ANT_config           = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/external/data/atmosphere/Antarctica/RACMO_SMB_1979_2016.nc'
 
     ! Timeframes for reading prescribed SMB forcing from file (set to 1E9 if the file has no time dimension)
     timeframe_SMB_prescribed_NAM_config          = 1E9
