--- a/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init_ROI.cfg
+++ b/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init_ROI.cfg
@@ -174,39 +174,43 @@
     filename_initial_mesh_ANT_config             = '/proj/bolinc/users/x_frare/outputs/results_ant_PD_spinup/main_output_ANT_00001.nc'
 
     ! Resolutions for different parts of the ice sheet
-    maximum_resolution_uniform_config            = 200e3                            ! [m]          Maximum resolution for the entire domain
-    maximum_resolution_grounded_ice_config       = 50e3                             ! [m]          Maximum resolution for grounded ice
-    maximum_resolution_floating_ice_config       = 30e3                             ! [m]          Maximum resolution for floating ice
-    maximum_resolution_grounding_line_config     = 20e3                             ! [m]          Maximum resolution for the grounding line
-    maximum_resolution_calving_front_config      = 30e3                             ! [m]          Maximum resolution for the calving front
-    maximum_resolution_ice_front_config          = 50e3                             ! [m]          Maximum resolution for the ice front
-    maximum_resolution_coastline_config          = 50e3                             ! [m]          Maximum resolution for the coastline
+    maximum_resolution_uniform_config            = 240e3                            ! [m]          Maximum resolution for the entire domain
+    maximum_resolution_grounded_ice_config       = 64e3                             ! [m]          Maximum resolution for grounded ice
+    maximum_resolution_floating_ice_config       = 16e3                             ! [m]          Maximum resolution for floating ice
+    maximum_resolution_grounding_line_config     = 16e3                             ! [m]          Maximum resolution for the grounding line
+    maximum_resolution_calving_front_config      = 16e3                             ! [m]          Maximum resolution for the calving front
+    maximum_resolution_ice_front_config          = 80e3                             ! [m]          Maximum resolution for the ice front
+    maximum_resolution_coastline_config          = 80e3                             ! [m]          Maximum resolution for the coastline
 
     ! Widths for each resolution band
-    grounding_line_width_config                  = 10e3                             ! [m]          Width of the band around the grounding line that should get this resolution
-    calving_front_width_config                   = 10e3                             ! [m]          Width of the band around the calving front that should get this resolution
-    ice_front_width_config                       = 10e3                             ! [m]          Width of the band around the ice front that should get this resolution
-    coastline_width_config                       = 10e3                             ! [m]          Width of the band around the coastline that should get this resolution
+    grounding_line_width_config                  = 8e3                             ! [m]          Width of the band around the grounding line that should get this resolution
+    calving_front_width_config                   = 8e3                             ! [m]          Width of the band around the calving front that should get this resolution
+    ice_front_width_config                       = 8e3                             ! [m]          Width of the band around the ice front that should get this resolution
+    coastline_width_config                       = 8e3                             ! [m]          Width of the band around the coastline that should get this resolution
 
     ! Regions of interest
     choice_regions_of_interest_config            = 'Franka_WAIS||LarsenC'                               ! Regions of interest where other (higher) resolutions apply. Separated by double vertical bars "||", e.g. "PineIsland||Thwaites"
     ROI_maximum_resolution_uniform_config        = 20e3                            ! [m]          Maximum resolution for the entire domain
-    ROI_maximum_resolution_grounded_ice_config   = 10e3                             ! [m]          Maximum resolution for grounded ice
-    ROI_maximum_resolution_floating_ice_config   = 5e3                             ! [m]          Maximum resolution for floating ice
-    ROI_maximum_resolution_grounding_line_config = 5e3                             ! [m]          Maximum resolution for the grounding line
-    ROI_maximum_resolution_calving_front_config  = 5e3                             ! [m]          Maximum resolution for the calving front
+    ROI_maximum_resolution_grounded_ice_config   = 16e3                             ! [m]          Maximum resolution for grounded ice
+    ROI_maximum_resolution_floating_ice_config   = 4e3                             ! [m]          Maximum resolution for floating ice
+    ROI_maximum_resolution_grounding_line_config = 4e3                             ! [m]          Maximum resolution for the grounding line
+    ROI_maximum_resolution_calving_front_config  = 4e3                             ! [m]          Maximum resolution for the calving front
     ROI_maximum_resolution_ice_front_config      = 10e3                             ! [m]          Maximum resolution for the ice front
     ROI_maximum_resolution_coastline_config      = 10e3                             ! [m]          Maximum resolution for the coastline
 
     ! Widths for each resolution band
-    ROI_grounding_line_width_config              = 05e3                             ! [m]          Width of the band around the grounding line that should get this resolution
-    ROI_calving_front_width_config               = 05e3                             ! [m]          Width of the band around the calving front that should get this resolution
-    ROI_ice_front_width_config                   = 05e3                             ! [m]          Width of the band around the ice front that should get this resolution
-    ROI_coastline_width_config                   = 05e3                             ! [m]          Width of the band around the coastline that should get this resolution
+    ROI_grounding_line_width_config              = 2e3                             ! [m]          Width of the band around the grounding line that should get this resolution
+    ROI_calving_front_width_config               = 2e3                             ! [m]          Width of the band around the calving front that should get this resolution
+    ROI_ice_front_width_config                   = 2e3                             ! [m]          Width of the band around the ice front that should get this resolution
+    ROI_coastline_width_config                   = 2e3                             ! [m]          Width of the band around the coastline that should get this resolution
+
+    ! Miscellaneous refinement options
+    do_refine_TransAntMounts_glaciers_config     = .true.                          !              Whether or not to refine the mesh over the Transantarctic Mountains glaciers (resolving those really helps in getting a stable Ross ice shelf)
+    max_res_TransAntMounts_glaciers_config       = 4e3                              ! [m]          Maximum resolution for the Transantarctic Mountains glaciers
 
     ! Mesh update settings
     allow_mesh_updates_config                    = .TRUE.                          ! [-]          Whether or not mesh updates are allowed
-    dt_mesh_update_min_config                    = 1000.0                           ! [yr]         Minimum amount of time between mesh updates
+    dt_mesh_update_min_config                    = 100.0                           ! [yr]         Minimum amount of time between mesh updates
     minimum_mesh_fitness_coefficient_config      = 0.95                             ! [-]          If the mesh fitness coefficient drops below this threshold, trigger a mesh update
     do_out_of_time_calving_front_relax_config    = .TRUE.                           !              Whether or not to step out of time and relax the calving front for a few iterations after a mesh update
 
@@ -519,7 +523,7 @@
     timeframe_initial_ice_temperature_ANT_config = 1E9
     ! Thermodynamical model
     choice_thermo_model_config                   = '3D_heat_equation'               ! Choice of thermodynamical model: "none", "3D_heat_equation"
-    dt_thermodynamics_config                     = 10.0                              ! [yr] Time step for the thermodynamical model
+    dt_thermodynamics_config                     = 2.0                              ! [yr] Time step for the thermodynamical model
     Hi_min_thermo_config                         = 10.0                             ! [m]  Ice thinner than this is assumed to have a temperature equal to the annual mean surface temperature throughout the vertical column
     choice_GL_temperature_BC_config              = 'pmp'                            ! Choice of basal boundary condition at grounding lines: 'grounded', 'subgrid', 'pmp'
     choice_ice_heat_capacity_config              = 'Pounder1965'                    ! Choice of ice heat capacity model: "uniform", "Pounder1965"
