--- a/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init_AP.cfg
+++ b/config-files_tetralith/config_tetralith_PD_inversion_dHdt_init_AP.cfg
@@ -634,7 +634,8 @@
     filename_SMB_prescribed_NAM_config           = ''
     filename_SMB_prescribed_EAS_config           = ''
     filename_SMB_prescribed_GRL_config           = ''
-    filename_SMB_prescribed_ANT_config           = '/home/x_frare/data/SMB/Noel2023_RACMO_SMB_mean_1979_2021.nc'
+    filename_SMB_prescribed_ANT_config           = '/home/x_frare/data/RACMO/Antarctica/RACMO_SMB_1979_2016.nc'
+    !filename_SMB_prescribed_ANT_config           = '/home/x_frare/data/SMB/Noel2023_RACMO_SMB_mean_1979_2021.nc'
 
     ! Timeframes for reading prescribed SMB forcing from file (set to 1E9 if the file has no time dimension)
     timeframe_SMB_prescribed_NAM_config          = 1E9
