--- a/config-files_tetralith/config_tetralith_PD.cfg
+++ b/config-files_tetralith/config_tetralith_PD.cfg
@@ -496,7 +496,7 @@
 
     choice_geothermal_heat_flux_config           = 'read_from_file'                 ! Choice of geothermal heat flux; can be 'uniform' or 'read_from_file'
     uniform_geothermal_heat_flux_config          = 1.72E06                          ! [J m^-2 yr^-1] Value when choice_geothermal_heat_flux == 'uniform' (1.72E06 J m^-2 yr^-1 according to Sclater et al. (1980))
-    filename_geothermal_heat_flux_config         = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/external/data/geothermal_heat_flux/ShapiroRitzwoller2004_global.nc' ! Expected units: J m^-2 s^-1 (conversion done internally). External GHF data file.
+    filename_geothermal_heat_flux_config         = '/home/x_frare/data/GHF/ShapiroRitzwoller2004_global.nc' ! Expected units: J m^-2 s^-1 (conversion done internally). External GHF data file.
 
   ! == Thermodynamics
   ! =================
@@ -570,11 +570,11 @@
     filename_climate_snapshot_NAM_config         = ''
     filename_climate_snapshot_EAS_config         = ''
     filename_climate_snapshot_GRL_config         = ''
-    filename_climate_snapshot_ANT_config         = '/Users/frre9931/Documents/PhD/RACMO/RACMO_clim_1979_2021_winds_noNaN.nc'
+    filename_climate_snapshot_ANT_config         = '/home/x_frare/data/climate/RACMO_clim_1979_2021_winds_noNaN.nc'
     
     choice_insolation_forcing_config             = 'static'                         ! 'static' or 'realistic'
     filename_insolation_config                   = '/Users/frre9931/Documents/PhD/ANT_UFEMISM/global_forcings/Insolation/Laskar_etal_2004_insolation.nc'                               ! File with the insolation solution (Laskar 2004)
-    static_insolation_time_config                = -21000.0                              ! [ka?] time to use for a static insolation
+    static_insolation_time_config                = 0.0                              ! [ka?] time to use for a static insolation
  
 
   ! == Ocean
@@ -603,7 +603,7 @@
     filename_ocean_snapshot_NAM_config           = ''
     filename_ocean_snapshot_EAS_config           = ''
     filename_ocean_snapshot_GRL_config           = ''
-    filename_ocean_snapshot_ANT_config           = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/external/data/ocean/woa18_decav_ts00_04_remapcon_r360x180_NaN.nc'
+    filename_ocean_snapshot_ANT_config           = '/home/x_frare/data/ocean/woa18_decav_ts00_04_remapcon_r360x180_NaN.nc'
 
   ! == Surface mass balance
   ! =======================
@@ -640,7 +640,7 @@
     timeframe_SMB_prescribed_NAM_config          = 1E9
     timeframe_SMB_prescribed_EAS_config          = 1E9
     timeframe_SMB_prescribed_GRL_config          = 1E9
-    timeframe_SMB_prescribed_ANT_config          = 31000.0
+    timeframe_SMB_prescribed_ANT_config          = 50000.0
     
    ! Restarting the IMAU-ITM SMB firn model
     choice_SMB_IMAUITM_init_firn_NAM_config      = 'uniform'                        ! 'uniform' or 'read_from_file' for restarts.
