--- a/config-files_tetralith/config_tetralith_PD.cfg
+++ b/config-files_tetralith/config_tetralith_PD.cfg
@@ -573,7 +573,7 @@
     filename_climate_snapshot_ANT_config         = '/home/x_frare/data/climate/RACMO_clim_1979_2021_winds_noNaN.nc'
     
     choice_insolation_forcing_config             = 'static'                         ! 'static' or 'realistic'
-    filename_insolation_config                   = '/Users/frre9931/Documents/PhD/ANT_UFEMISM/global_forcings/Insolation/Laskar_etal_2004_insolation.nc'                               ! File with the insolation solution (Laskar 2004)
+    filename_insolation_config                   = '/home/x_frare/data/global_forcings/Laskar_etal_2004_insolation.nc'                               ! File with the insolation solution (Laskar 2004)
     static_insolation_time_config                = 0.0                              ! [ka?] time to use for a static insolation
  
 
@@ -634,13 +634,13 @@
     filename_SMB_prescribed_NAM_config           = ''
     filename_SMB_prescribed_EAS_config           = ''
     filename_SMB_prescribed_GRL_config           = ''
-    filename_SMB_prescribed_ANT_config           = '/Users/frre9931/Desktop/UFEMISM2.0_main/UFEMISM2.0/results_ant_PD_spinup/main_output_ANT_00001.nc'
+    filename_SMB_prescribed_ANT_config           = '/home/x_frare/data/RACMO/Antarctica/RACMO_SMB_1979_2016.nc'
 
     ! Timeframes for reading prescribed SMB forcing from file (set to 1E9 if the file has no time dimension)
     timeframe_SMB_prescribed_NAM_config          = 1E9
     timeframe_SMB_prescribed_EAS_config          = 1E9
     timeframe_SMB_prescribed_GRL_config          = 1E9
-    timeframe_SMB_prescribed_ANT_config          = 50000.0
+    timeframe_SMB_prescribed_ANT_config          = 1E9
     
    ! Restarting the IMAU-ITM SMB firn model
     choice_SMB_IMAUITM_init_firn_NAM_config      = 'uniform'                        ! 'uniform' or 'read_from_file' for restarts.
